    always load the "old" value, so that it's available to
    attributes.get_history(). [ticket:1961]
    
  - Query.get() will raise if the number of params
    in a composite key is too large, as well as too 
    small. [ticket:1977]

  - Backport of "optimized get" fix from 0.7,
    improves the generation of joined-inheritance
    "load expired row" behavior.  [ticket:1992]

- sql
  - Fixed operator precedence rules for multiple
    chains of a single non-associative operator.
    I.e. "x - (y - z)" will compile as "x - (y - z)"
    and not "x - y - z".  Also works with labels,
    i.e. "x - (y - z).label('foo')"
    [ticket:1984]
    
  - The 'info' attribute of Column is copied during 
    Column.copy(), i.e. as occurs when using columns
    in declarative mixins.  [ticket:1967]

  - Added a bind processor for booleans which coerces
    to int, for DBAPIs such as pymssql that naively call 
    str() on values.
    
- engine
  - The "unicode warning" against non-unicode bind data
    is now raised only when the
    Unicode type is used explictly; not when 
    convert_unicode=True is used on the engine 
    or String type.
    
  - Fixed memory leak in C version of Decimal result
    processor.  [ticket:1978]
    
  - Implemented sequence check capability for the C 
    version of RowProxy, as well as 2.7 style 
    "collections.Sequence" registration for RowProxy.
    [ticket:1871]

  - Threadlocal engine methods rollback(), commit(),
    prepare() won't raise if no transaction is in progress;
    this was a regression introduced in 0.6.  [ticket:1998]
    
- postgresql
  - Single element tuple expressions inside an IN clause
    parenthesize correctly, also from [ticket:1984]
    
  - Ensured every numeric, float, int code, scalar + array,
    are recognized by psycopg2 and pg8000's "numeric" 
    base type. [ticket:1955]

  - Added as_uuid=True flag to the UUID type, will receive
    and return values as Python UUID() objects rather than